<resources>
    <string name="app_name">Udacity_6_News_App</string>
    <string name="interests_edittext_hint">Add an interest here!</string>
    <string name="add_button_text">Add item</string>
    <string name="go_button_text">Lets Go!</string>
    <string name="welcome_textview_text"><b><b><font fgcolor='#C46464'>Welcome!</font></b></b>\nFirst, let\'s get an\ninterest.</string>
    <string name="add_item">Add Item</string>
    <string name="autofillhints">Games, Donald Trump, Music</string>
    <string name="interests_left">Interests: %1$d</string>
    <string name="your_news">Your\nNews</string>
    <string name="your_news_textview">Add <b><b><font fgcolor='#7dc677'>YOUR</font></b></b> Topics Create <b><b><font fgcolor='#7dc677'>YOUR</font></b></b> News</string>
    <string name="oops_nlooks_like_someone_tripped_over_a_wire_no_internet_available_nclick_below_to_go_to_internet_settings">Oops! Looks like someone tripped over a wire, no internet available. Click below to go to internet settings</string>
    <string name="back_to_interests">Back to interests</string>
    <string name="go_to_internet_settings">Go to internet settings</string>
    <string name="back_to_the_news">Back to the news</string>
    <string name="images_from_guardian_articles">Images from Guardian articles</string>
    <string name="image_for_no_internet">Image for no internet</string>
    <string name="splashscreen_dont_show_again">Don\'t show me this again</string>
    <string name="news_icon">news_icon</string>
    <string name="image_background_for_splash_screen">image_background_for_splash_screen</string>
</resources>
