<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_screen"
        android:contentDescription="@string/image_background_for_splash_screen" />

    <ImageView
        android:id="@+id/upper_circle_imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:background="@drawable/upper_circle"
        android:contentDescription="@string/news_icon" />

    <TextView
        android:id="@+id/your_news_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dontShowButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/your_news_textview"
        android:textColor="#b268ac"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dontShowButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="#7dc677"
        android:text="@string/splashscreen_dont_show_again" />

</RelativeLayout>