<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:fontFamily="@font/damion"
        android:gravity="center"
        android:text="@string/welcome_textview_text"
        android:textColor="@color/dark_grey"
        android:textSize="35sp"
        tools:fontFamily="@font/roboto_slab" />

    <EditText
        android:id="@+id/interests_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_textview"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:hint="@string/interests_edittext_hint"
        android:maxLines="1"
        android:padding="10dp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/interests_edittext"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_rectangle_add_button"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_button_text"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:background="@drawable/circular_button"
        android:elevation="10dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/go_button_text"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:targetApi="lollipop" />
</RelativeLayout>